Closed Bug 1669381 Opened 5 years ago Closed 5 years ago

Crash in [@ nsObserverService::AddObserver] via gl::GLLibraryEGL::CreateDisplay

Categories

(Core :: Graphics, defect, P1)

defect

Tracking

()

RESOLVED FIXED
83 Branch
Tracking Status
firefox83 --- fixed

People

(Reporter: jgilbert, Assigned: jgilbert)

References

Details

Attachments

(1 file)

This happens with webgl.out-of-process:true.

Pushed by jgilbert@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c6acf0da4833 Replace GLLibraryEGL nsIGfxInfo use with gfxVars. r=mattwoodrow
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: