gfx/gl/GLLibraryEGL.cpp
@@ -19,7 +19,6 @@
 #include "mozilla/webrender/RenderThread.h"
 #include "nsDirectoryServiceDefs.h"
 #include "nsDirectoryServiceUtils.h"
-#include "nsIGfxInfo.h"
 #include "nsPrintfCString.h"
 #ifdef XP_WIN
 #  include "mozilla/gfx/DeviceManagerDx.h"
@@ -208,26 +207,19 @@ std::shared_ptr<EglDisplay> GLLibraryEGL::CreateDisplay(
   return ret;
 }
 
-static bool IsAccelAngleSupported(const nsCOMPtr<nsIGfxInfo>& gfxInfo,
-                                  nsACString* const out_failureId) {
+static bool IsAccelAngleSupported(nsACString* const out_failureId) {
   if (wr::RenderThread::IsInRenderThread()) {
     // We can only enter here with WebRender, so assert that this is a
     // WebRender-enabled build.
     return true;
   }
-  int32_t angleSupport;
-  nsCString failureId;
-  gfxUtils::ThreadSafeGetFeatureStatus(gfxInfo, nsIGfxInfo::FEATURE_WEBGL_ANGLE,
-                                       failureId, &angleSupport);
-  if (failureId.IsEmpty() && angleSupport != nsIGfxInfo::FEATURE_STATUS_OK) {
-    // This shouldn't happen, if we see this it's because we've missed
-    // some failure paths
-    failureId = "FEATURE_FAILURE_ACCL_ANGLE_NOT_OK"_ns;
+  if (!gfxVars::AllowWebglAccelAngle()) {
+    if (out_failureId->IsEmpty()) {
+      *out_failureId = "FEATURE_FAILURE_ACCL_ANGLE_NOT_OK"_ns;
+    }
+    return false;
   }
-  if (out_failureId->IsEmpty()) {
-    *out_failureId = failureId;
-  }
-  return (angleSupport == nsIGfxInfo::FEATURE_STATUS_OK);
+  return true;
 }
 
 class AngleErrorReporting {
@@ -718,14 +710,11 @@ std::shared_ptr<EglDisplay> GLLibraryEGL::DefaultDisplay(
 
 std::shared_ptr<EglDisplay> GLLibraryEGL::CreateDisplay(
     const bool forceAccel, nsACString* const out_failureId) {
-  const nsCOMPtr<nsIGfxInfo> gfxInfo = do_GetService("@mozilla.org/gfx/info;1");
-
   std::shared_ptr<EglDisplay> ret;
 
   if (IsExtensionSupported(EGLLibExtension::ANGLE_platform_angle_d3d)) {
     nsCString accelAngleFailureId;
-    bool accelAngleSupport =
-        IsAccelAngleSupported(gfxInfo, &accelAngleFailureId);
+    bool accelAngleSupport = IsAccelAngleSupported(&accelAngleFailureId);
     bool shouldTryAccel = forceAccel || accelAngleSupport;
     bool shouldTryWARP = !forceAccel;  // Only if ANGLE not supported or fails
 
