gfx/thebes/gfxUtils.h
@@ -296,10 +296,6 @@ class gfxUtils {
                                  const nsAString& aEncoderOptions,
                                  nsIInputStream** outStream);
 
-  static nsresult ThreadSafeGetFeatureStatus(
-      const nsCOMPtr<nsIGfxInfo>& gfxInfo, int32_t feature,
-      nsACString& failureId, int32_t* status);
-
   static void RemoveShaderCacheFromDiskIfNecessary();
 
   /**
